compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assert__assert_nil_always_throws.snap
---
source: compiler-core/src/javascript/tests/assert.rs
expression: "\npub fn go(x: Nil) {\n  let assert Nil = x\n}\n"
---
----- SOURCE CODE

pub fn go(x: Nil) {
  let assert Nil = x
}


----- COMPILED JAVASCRIPT
export function go(x) {
  
  return x;
}
