compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assert__assert_with_block_message.snap
---
source: compiler-core/src/javascript/tests/assert.rs
expression: "\nfn identity(a) {\n  a\n}\n\npub fn main() {\n  assert identity(True) as {\n    let message = identity(\"This shouldn't fail\")\n    message\n  }\n}\n"
---
----- SOURCE CODE

fn identity(a) {
  a
}

pub fn main() {
  assert identity(True) as {
    let message = identity("This shouldn't fail")
    message
  }
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

function identity(a) {
  return a;
}

export function main() {
  if (!identity(true)) {
    throw makeError(
      "assert",
      FILEPATH,
      "my/mod",
      7,
      "main",
      (() => {
        let message = identity("This shouldn't fail");
        return message;
      })(),
      {
        kind: "function_call",
        arguments: [{ kind: "literal", value: true, start: 59, end: 63 }],
        start: 43,
        end: 64,
        expression_start: 50
      }
    )
  }
  return undefined;
}
