compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assert__assert_with_logical_and_binary_rhs_2.snap
---
source: compiler-core/src/javascript/tests/assert.rs
expression: "\npub fn main() {\n   assert True && \"foo\" == \"foo\"\n}\n"
---
----- SOURCE CODE

pub fn main() {
   assert True && "foo" == "foo"
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main() {
  if (true) {
    if ("foo" !== "foo") {
      throw makeError(
        "assert",
        FILEPATH,
        "my/mod",
        3,
        "main",
        "Assertion failed.",
        {
          kind: "binary_operator",
          operator: "&&",
          left: { kind: "literal", value: true, start: 27, end: 31 },
          right: { kind: "expression", value: false, start: 35, end: 49 },
          start: 20,
          end: 49,
          expression_start: 27
        }
      )
    }
  } else {
    throw makeError(
      "assert",
      FILEPATH,
      "my/mod",
      3,
      "main",
      "Assertion failed.",
      {
        kind: "binary_operator",
        operator: "&&",
        left: { kind: "literal", value: false, start: 27, end: 31 },
        right: { kind: "unevaluated", start: 35, end: 49 },
        start: 20,
        end: 49,
        expression_start: 27
      }
    )
  }
  return undefined;
}
